Fixing sort method in Post repository. Fixing sort button on small screens.

--- a/public/scss/partials/responsive/_small.scss
+++ b/public/scss/partials/responsive/_small.scss
@@ -1,4 +1,8 @@
 @media (max-width: 800px) {
+	.full-width-small{
+		width: 100%;
+		display: block;
+	}
 	.display-inline{
 		display: inline !important;
 	}
